# wifi-radar-slam

./: .gitignore  .zenodo.json  CITATION.cff  README.md  pyproject.toml  rj.txt
configs/: controlled_music.yaml  controlled_music_160.yaml  controlled_music_60ghz.yaml  controlled_music_60ghz_16ant.yaml  controlled_music_disc.yaml  controlled_music_joint.yaml  controlled_oracle.yaml  controlled_oracle_60ghz.yaml  nominal.yaml  nominal_joint.yaml  nominal_oracle.yaml  smoke.yaml  street_metal_music.yaml  street_metal_oracle.yaml  sweep.yaml
data/: cost_data.yaml  cost_results.json  enhanced_map_results.json  fusion_results.json  kitti_results.json  lidar_geo_results.json  lidar_sionna_results.json  map_filter_f1.json  mapping_floor_isolation.json  wifi_results.json  wifi_results_paper2.json
docs/: DATASHEET.md  RELEASE-CHECKLIST.md  RUNNING.md  esp32-s3-usb-vs-com-port.md  hardware-build.md  literature-paper2.md  literature-paper3.md  paper4-architecture-python-vs-c.md  paper4-experiment-setup.html  paper4-restart-static-bench.ar.md  paper4-restart-static-bench.md  render-setup-sheet.sh  research-paper4-hardware.md  results-paper2.md  results-paper3-anchor.md  results-paper3-radar-substrate.md  results-paper4-first-light.md  results-paper4-rung0.md  results-v1.md
experiments/: diagnose_triangulation.py  fetch_boreas.py  fetch_kitti.py  fetch_real_csi.sh  isolate_mapping_floor.py  make_dataset.py  make_paper2_figures.py  regen_wifi_results.py  render_scene.py  run_ablation.py  run_bench.py  run_cost_model.py  run_enhanced_map.py  run_fusion.py  run_hw_phantom.py  run_lidar_geo.py  run_lidar_kitti.py  run_lidar_sionna.py  (+7 more)
(+168 files in other folders)
